# handy

./: .gitignore  CMakeLists.txt  README.md
doc/: handy.aux  handy.bbl  handy.bib  handy.blg  handy.out  handy.tex
ncl/: plot.ncl
run/: namelist
src/: handy.f90  handy_mod.f90  handy_step.f90
